--- a/style.css
+++ b/style.css
@@ -1,1 +1,115 @@
 ![BelBatman](https://m.media-amazon.com/images/I/51O3P2TgvGL._AC_SX679_.jpg)
+
+
+
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .nav-link {
+    padding: 0 20px;
+    line-height: 80px;
+  }
+  .nav-list {
+    list-style: none;
+  }
+  .nav-link:hover {
+    background-color: rgba(76, 168, 119, 0.2);
+  }
+  .nav-link {
+    transition: 0.3s;
+  }
+  .section-item a {
+    color: #6a9b70;
+    text-decoration: none;
+    transition: color 0.5s;
+  }
+  .section-item a:hover {
+    color: #9b4e4e;
+  }
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* margin-top: 30px;
+    margin-left: 100px;
+    margin-right: 100px;*/
+  }
+
+  .section {
+    width: 50%;
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+  .body {
+    font-family: "Anek Malayalam", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #200a36;
+  }
+  .section-title {
+    font-size: 40px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: #080e09;
+    margin-left: 100px;
+  }
+  .section-sub {
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: capitalize;
+    letter-spacing: 10px;
+    color: #165021;
+    margin-left: 100px;
+  }
+  .section-one {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .link {
+    text-decoration: none;
+    color: #0d8e1f;
+    transition: color 0.5s;
+  }
+
+  .link:hover {
+    color: #032908;
+  }
+  .footer {
+display: flex;
+justify-content: space-between;
+align-items: center;
+max-width: 1440px;
+min-width: 585px;
+padding: 10px 20px;
+margin-left: 100px;
+margin-right: 100px;
